--- a/hypertext-narrative/styles/style-bio.css
+++ b/hypertext-narrative/styles/style-bio.css
@@ -24,6 +24,12 @@ a:hover {
     display: inline-block;
 }
 
+.freeze-tag{
+    position: fixed;
+    top: 0; /*smaller the #, higher up the element*/
+    left: 0; /*smaller the #, more left the element is*/
+}
+
 img {
     position: fixed;
     top: 0;
