--- a/hypertext-narrative/styles/style-bio.css
+++ b/hypertext-narrative/styles/style-bio.css
@@ -27,7 +27,7 @@ a:hover {
 .freeze-tag{
     position: fixed;
     top: 0; /*smaller the #, higher up the element*/
-    left: 0; /*smaller the #, more left the element is*/
+    left: 3.5%; /*smaller the #, more left the element is*/
     margin: 20px;
 }
 
@@ -52,8 +52,8 @@ div {
 
 .overlay-text {
     position: absolute;
-    top: 90%;
-    left: 10%;
+    top: 10%;
+    left: 0%;
     /* transform: translate(20%, 8%);   */
     color: #fff;
     padding: 30px 60px;
@@ -77,6 +77,7 @@ div {
 }
 
 .stretch-text{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     animation-duration: 5s;
     animation-name: slidein;
 }
@@ -85,7 +86,7 @@ div {
 
 @keyframes slidein {
     from {
-            margin-left: 100%;
+            margin-top: 70%;
             width: 300%;
         }
     
