--- a/hypertext-narrative/styles/style-bio.css
+++ b/hypertext-narrative/styles/style-bio.css
@@ -95,3 +95,27 @@ div {
             width: 100%;
         }
 }
+
+@media (max-width: 1200px) {
+    h1 {
+        font-size: 24px;
+    }
+
+    img {
+        max-width: 100%;
+        max-height: 100%;
+    }
+
+    ol,
+    li {
+        font-size: 8px;
+    }
+
+    .freeze-tag{
+        margin-left: 50px;
+    }
+
+    a {
+        font-size: 18px;
+    }
+}
