--- a/hypertext-narrative/styles/style-bio.css
+++ b/hypertext-narrative/styles/style-bio.css
@@ -57,26 +57,13 @@ div {
     /* transform: translate(20%, 8%);   */
     color: #fff;
     padding: 30px 60px;
-    margin-left: 15px;
+    margin-left: 5px;
     font-size: 26px;
 }
 
-.scrolly {
-    display: flex;
-    flex-direction: column;
-    height: auto;
-    position: relative;
-}
-
-.scroll-step {
-    height: 500px;
-    /* border: 3px dashed rgb(145, 0, 0); */
-    color: white; 
-    font-weight: 400;
-    width: 100%;
-}
 
 .stretch-text{
+    font-size: 22px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     animation-duration: 5s;
     animation-name: slidein;
